--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,61 +1,78 @@
 {
-  "theme_color": "#29ABE2",
-  "background_color": "#F0F2F5",
+  "theme_color": "#0096ff",
+  "background_color": "#f0f2f5",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
   "name": "StreamTune",
   "short_name": "StreamTune",
   "description": "A modern, responsive music streaming application.",
-  "id": "/",
+  "id": "/?source=pwa",
   "lang": "en-US",
   "dir": "ltr",
   "orientation": "portrait-primary",
-  "categories": ["music", "entertainment"],
-  "prefer_related_applications": false,
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
-  "screenshots": [
-    {
-      "src": "https://placehold.co/1080x1920.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Home Screen"
-    },
-    {
-      "src": "https://placehold.co/1080x1920.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Player View"
-    }
+  "categories": [
+    "music",
+    "entertainment"
   ],
+  "prefer_related_applications": false,
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "https://placehold.co/1080x1920.png",
+      "type": "image/png",
+      "sizes": "1080x1920",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "https://placehold.co/1280x720.png",
+      "type": "image/png",
+      "sizes": "1280x720",
+      "form_factor": "wide"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Search Music",
+      "short_name": "Search",
+      "description": "Find your favorite songs",
+      "url": "/search",
+      "icons": [{ "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2", "sizes": "96x96" }]
+    },
+    {
+      "name": "Your Library",
+      "short_name": "Library",
+      "description": "Access your playlists and liked songs",
+      "url": "/library",
+      "icons": [{ "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2", "sizes": "96x96" }]
+    }
+  ],
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "window_controls_overlay": {
+    "titlebar_area_width": "250px"
+  },
+  "share_target": {
+    "action": "/share-target",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  }
 }
