--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,71 +1,62 @@
+
 {
-  "theme_color": "#0096ff",
-  "background_color": "#f0f2f5",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
   "name": "StreamTune",
   "short_name": "StreamTune",
-  "description": "A modern, responsive music streaming application.",
   "id": "/?source=pwa",
+  "start_url": "/?source=pwa",
+  "display": "standalone",
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "background_color": "#000",
+  "theme_color": "#0096ff",
+  "description": "A modern, responsive music streaming application.",
   "lang": "en-US",
   "dir": "ltr",
   "orientation": "portrait-primary",
   "categories": [
-    "music",
-    "entertainment"
+    "music"
   ],
-  "prefer_related_applications": false,
   "icons": [
     {
-      "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2",
+      "src": "https://i.postimg.cc/SswWC87w/streamtune.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2",
+      "src": "https://i.postimg.cc/SswWC87w/streamtune.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "https://placehold.co/1080x1920.png",
-      "type": "image/png",
-      "sizes": "1080x1920",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "https://placehold.co/1280x720.png",
-      "type": "image/png",
-      "sizes": "1280x720",
-      "form_factor": "wide"
-    }
-  ],
   "shortcuts": [
     {
-      "name": "Search Music",
+      "name": "Search",
       "short_name": "Search",
-      "description": "Find your favorite songs",
-      "url": "/search",
-      "icons": [{ "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2", "sizes": "96x96" }]
+      "description": "Find your favorite music",
+      "url": "/search?source=pwa",
+      "icons": [
+        {
+          "src": "/icons/search.png",
+          "sizes": "192x192"
+        }
+      ]
     },
     {
       "name": "Your Library",
       "short_name": "Library",
       "description": "Access your playlists and liked songs",
-      "url": "/library",
-      "icons": [{ "src": "https://i.ibb.co/jDDgN4r/logo.png?v=2", "sizes": "96x96" }]
+      "url": "/library?source=pwa",
+      "icons": [
+        {
+          "src": "/icons/library.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ],
-  "display_override": [
-    "window-controls-overlay"
-  ],
-  "window_controls_overlay": {
-    "titlebar_area_width": "250px"
-  },
   "share_target": {
     "action": "/share-target",
     "method": "GET",
@@ -74,5 +65,22 @@
       "text": "text",
       "url": "url"
     }
-  }
+  },
+  "screenshots": [
+    {
+      "src": "https://placehold.co/1080x1920.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "App Home Screen"
+    },
+    {
+      "src": "https://placehold.co/1280x800.png",
+      "sizes": "1280x800",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "App Home Screen"
+    }
+  ],
+  "prefer_related_applications": false
 }
