--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.8",
+    "@genkit-ai/googleai": "^1.1.2",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -39,7 +40,9 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
+    "nanoid": "^5.0.7",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
