--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.475.0",
     "nanoid": "^5.0.7",
     "next": "15.3.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
