--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^12.3.0",
+    "framer-motion": "^11.3.19",
     "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
     "nanoid": "^5.0.7",
